[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wayback-machine-mcp"
version = "1.0.0"
description = "MCP server for fetching snapshots from the Internet Archive Wayback Machine"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
wayback-machine-mcp = "server:main"

[project.urls]
Homepage = "https://github.com/lakshyaag/wayback-machine-mcp"
Repository = "https://github.com/lakshyaag/wayback-machine-mcp"

[tool.hatch.build.targets.wheel]
packages = ["."]
